# management-system

./: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/app/: main.py
src/app/admin/: auth.py  setup.py  views.py
src/app/api/: auth.py  calendar.py  comments.py  meetings.py  register.py  root.py  tasks.py  teams.py  users.py
src/app/core/: config.py  database.py  lifespan.py  redis.py  security.py
src/app/front/: router.py  utils.py
src/app/front/static/: calendar.css  (+6 more)
src/app/managers/: comments.py  meetings.py  tasks.py  teams.py  users.py
src/app/migrations/: env.py
src/app/models/: __init__.py  base.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
src/app/schemas/: auth.py  base.py  calendar.py  comments.py  evaluations.py  meetings.py  tasks.py  teams.py  users.py
src/app/services/: auth.py  calendar.py  comments.py  meetings.py  register.py  tasks.py  teams.py  users.py
src/app/templates/: home.html
tests/: conftest.py
tests/api/: test_auth_api.py  test_calendar_api.py  test_comment_api.py  test_meeting_api.py  test_register_api.py  test_task_api.py  test_team_api.py  test_user_api.py
tests/managers/: test_comment_manager.py  test_meeting_manager.py  test_task_manager.py  test_team_manager.py  test_user_manager.py
tests/services/: test_auth_service.py  test_calendar_service.py  test_comment_service.py  test_meeting_service.py  test_register_service.py  test_task_service.py  test_team_service.py  test_user_service.py
(+10 files in other folders)
