[project]
name = "management-system"
version = "0.1.0"
description = "Business management system"
readme = "README.md"

requires-python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.10.1"
sqlalchemy = "^2.0.42"
asyncpg = "^0.30.0"
gunicorn = "^23.0.0"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pyjwt = "^2.10.1"
sqladmin = "^0.21.0"
itsdangerous = "^2.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["C", "E", "F", "W"]

[tool.ruff.format]
quote-style = "single"


[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]
